--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,11 +10,14 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url("$rootDir/../node_modules/react-native/android") }  // This line is crucial
+
     }
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
+        classpath 'com.google.gms:google-services:4.3.15'  // ✅ Use latest version
     }
 }
 
