--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,11 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+#new 
+org.gradle.jvmargs=-Xmx4g
+
+# old
+#org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
@@ -37,3 +41,14 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+android.enableJetifier=true
+USE_HERMES=false
+
+USE_CODEGEN=false
+
+
+MYAPP_UPLOAD_STORE_FILE=my-release-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=nras-alias
+MYAPP_UPLOAD_STORE_PASSWORD=nras-app-t
+MYAPP_UPLOAD_KEY_PASSWORD=nras-app-t
