--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/messaging": "^21.13.0",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
