status bar fixed

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-webview": "^13.13.5"
+    "react-native-webview": "^13.13.5",
+    "react-native-safe-area-context": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
