--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@react-native-firebase/messaging": "^21.13.0",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-file-viewer": "^2.1.5",
+    "react-native-fs": "^2.20.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safe-area-context": "^5.1.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-webview": "^13.13.5",
-    "react-native-safe-area-context": "^5.1.0"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
